# RadiantCastOS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.router.toml  fly.toml  package-lock.json  package.json  vercel.json
apps/web/: package.json  vercel.json
apps/web/app/: layout.jsx  page.jsx
apps/web/app/_ui/: NeonShell.jsx  neonStyles.js
apps/web/app/billing/: page.jsx
apps/web/app/dashboard/: page.jsx
apps/web/app/demo/player/: page.jsx  playerClient.jsx
apps/web/app/docs/: page.jsx
apps/web/app/get-started/: page.jsx
apps/web/app/login/: page.jsx
apps/web/app/pricing/: page.jsx
apps/web/app/register/: page.jsx
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: commands.py  events.py  health.py  metrics.py  playlists.py  runtime.py  stations.py
backend/app/core/: auth.py  config.py  metrics.py  metrics_middleware.py  security.py  security_middleware.py
backend/app/migrations/: env.py  script.py.mako
backend/app/migrations/versions/: 0001_init_20251222_233827_init.py
backend/app/models/: event.py  playlist.py  runtime.py  station.py
backend/app/schemas/: event.py  playlist.py  runtime.py  station.py
backend/app/services/: command_service.py  playlist_service.py  runtime_service.py  station_service.py
docs/: production_cloudflare.md
infra/: docker-compose.yml
infra/icecast/: icecast.xml
router/: Dockerfile  pyproject.toml
router/app/: __main__.py  config.py  ffmpeg.py  http_server.py  metrics.py  router.py  silence.py
(+3 files in other folders)
